Update to include cos sim match review of 1 or more resumes
created fun and for loop

--- a/ATS_1.ipynb
+++ b/ATS_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "88762158",
+   "id": "b944a61d",
    "metadata": {},
    "outputs": [
     {
@@ -23,17 +23,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "441fca04",
+   "id": "ee52a631",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import docx2txt"
+    "import docx2txt\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5bb80348",
+   "execution_count": 20,
+   "id": "0decadad",
    "metadata": {},
    "outputs": [
     {
@@ -126,24 +128,108 @@
       "\n",
       "BA in Psychology\n",
       "\n",
-      "Aug 2006 to May 2010\n"
+      "Aug 2006 to May 2010\n",
+      "Caleb J. Picker\n",
+      "\n",
+      "\tFernley, NV (available to relocate or work remotely) | (725)-217-8654 | caleb.j.picker@gmail.com |\n",
+      "\n",
+      "\thttps://www.linkedin.com/in/calebjpicker/ | https://github.com/calebjpicker | https://calebjpicker.quarto.pub/cvr/\n",
+      "\n",
+      "\tWork Experience\n",
+      "\n",
+      "\t\n",
+      "\n",
+      "\tProduction Associate, Tesla, Sparks, NV\n",
+      "\n",
+      "\tDec 2022 to Present\n",
+      "\n",
+      "Received a raise within first six months, demonstrating my exceptional work ethic, engineering quality, and positive collaboration\n",
+      "\n",
+      "Leveraged data engineering principles in tracking and visualizing versatility at workstations, providing monthly progress reports to supervisors\n",
+      "\n",
+      "\tMarketing Analyst, Caesars Entertainment, Las Vegas, NV\n",
+      "\n",
+      "\tNov 2019 to Jul 2021\n",
+      "\n",
+      "Automated P&L and KPI processes via SQL and Python, saving $50k annually and enhancing data standards operations collaborations\n",
+      "\n",
+      "Implemented confidence intervals and test/control concepts, leading to 3% more profitable marketing campaigns and a 10% reduction in campaign costs\n",
+      "\n",
+      "Utilized Tableau to create a detailed zip code analysis and population density dashboard, facilitating precise market segmentation, resulting in a 5% increase in campaign performance metrics\n",
+      "\n",
+      "\tPricing Analyst, American Homes 4 Rent, Las Vegas, NV\n",
+      "\n",
+      "\tJul 2018 to Nov 2019\n",
+      "\n",
+      "Spearheaded a program identifying high-risk renters using BI collaboration, leading to the development of Tableau and Excel dashboards for effective monitoring\n",
+      "\n",
+      "Achieved above-market occupancy rates by designing and implementing data-driven pricing strategies for 22 rental markets, creating robust databases to support strategic decision-making\n",
+      "\n",
+      "Analyzed price elasticity of demand metrics by market over time, driving a year-over-year revenue increase of 3%\n",
+      "\n",
+      "\tScientist/Statistical Consultant, UNLV, Las Vegas, NV\n",
+      "\n",
+      "\tMay 2015 to May 2018\n",
+      "\n",
+      "Analyzed survey data from introductory students and found a link between skill development, grades, and GPA, showing the psychometric validity of the survey\n",
+      "\n",
+      "Published a peer-reviewed article on efficient methods for scoring the Levels of Emotional Awareness Scale (LEAS) using Program for Open-Ended Scoring (POES), enabling wider use of the LEAS and advancing the research on emotional awareness.\n",
+      "\n",
+      "Developed a FORTRAN program to compare correlation differences with confidence intervals, one on fibromyalgia and emotional awareness and another on gender differences in emotional awareness.\n",
+      "\n",
+      "\tMaster of Arts/Research Lab Manager, UNLV, Las Vegas, NV\n",
+      "\n",
+      "\tMay 2010 to May 2015\n",
+      "\n",
+      "Successfully managed multi-year projects with a 99% success rate, utilizing project management processes and signal detection theory, ensuring on-time and within-budget completion\n",
+      "\n",
+      "Conducted literature review on memory development, unveiling the influence of structural brain changes and neural mechanisms on memory retrieval in children, contributing to the field of Cognitive Science\n",
+      "\n",
+      "Led a comprehensive review of recognition memory theories, developing a novel perception model that emphasized the role of brain region representations and task materials, advancing Cognitive Neuroscience \n",
+      "\n",
+      "\tEducation\n",
+      "\n",
+      "\tUniversity of Nevada, Las Vegas\n",
+      "\n",
+      "\t\n",
+      "\n",
+      "MA in Cognitive and Quantitative Psychology\n",
+      "\n",
+      "Aug 2010 to May 2015\n",
+      "\n",
+      "BA in Psychology\n",
+      "\n",
+      "Aug 2006 to May 2010\n",
+      "\n",
+      "\n",
+      "\n",
+      "\tSkills & Certifications\n",
+      "\n",
+      "Programming: R/Rstudio, Python, BigQuery. SQL, Tableau, Power BI, Excel, VBA, Excel Solver, SPSS, Mplus, C++, YAML, Quarto, Airflow, and Microsoft Office Suite\n",
+      "\n",
+      "Certifications/Course Work: T-SQL badge (LinkedIn), 1 R course and 3 SQL courses (Data Camp), Machine Learning (Coursera), and Mathematics for Machine Learning (Coursera)\n",
+      "\n",
+      "APA Workshops: Big Data: Exploratory Data Mining in Behavioral Research and Structural Equation Modeling in Longitudinal Research\n"
      ]
     }
    ],
    "source": [
     "# Load the applicant and job descriptions\n",
     "# Set filenames to resume and jd variables\n",
-    "resumedocx = \"Caleb Picker Resume draft 16 July 09 2023.docx\"\n",
+    "resumedocx_1 = \"Caleb Picker Resume draft 16 July 09 2023.docx\"\n",
+    "resumedocx_2 = \"Caleb Picker Resume draft 18 July 09 2023.docx\"\n",
     "\n",
     "# Load the files\n",
-    "resume = docx2txt.process(resumedocx)\n",
-    "print(resume)\n"
+    "resume_1 = docx2txt.process(resumedocx_1)\n",
+    "resume_2 = docx2txt.process(resumedocx_2)\n",
+    "print(resume_1)\n",
+    "print(resume_2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b6e14826",
+   "execution_count": 21,
+   "id": "98b45e9b",
    "metadata": {},
    "outputs": [
     {
@@ -470,6 +556,7 @@
     }
    ],
    "source": [
+    "# IMport job description\n",
     "jddocx = \"Roles.docx\"\n",
     "jd = docx2txt.process(jddocx)\n",
     "print(jd)"
@@ -477,73 +564,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "fac24974",
+   "execution_count": 26,
+   "id": "57792f2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Match: 67.51%\n",
+      "Match: 69.04%\n"
+     ]
+    }
+   ],
    "source": [
     "# List of text to store resume and job desription\n",
-    "text = [resume,jd]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "286c0ebe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# \n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "cv = CountVectorizer()\n",
-    "count_matrix = cv.fit_transform(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "24328bda",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.         0.67508973]\n",
-      " [0.67508973 1.        ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "print(cosine_similarity(count_matrix))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "894c601e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "67.51\n"
-     ]
-    }
-   ],
-   "source": [
-    "match = cosine_similarity(count_matrix)[0][1]\n",
-    "match = match*100\n",
-    "match = round(match,2)\n",
-    "print(match)"
+    "def count_matrix_fun(resume,jd):\n",
+    "    text = [resume,jd]\n",
+    "    # Count the number of words in the text matrix\n",
+    "    cv = CountVectorizer()\n",
+    "    count_matrix = cv.fit_transform(text)\n",
+    "    # Calculate cosine similarity similar to percent match\n",
+    "    match = cosine_similarity(count_matrix)[0][1]\n",
+    "    match = match*100\n",
+    "    match = round(match,2)\n",
+    "    print(f\"Match: {match}%\")\n",
+    "\n",
+    "resumes = [resume_1,resume_2]\n",
+    "\n",
+    "for i, resume_text in enumerate(resumes):\n",
+    "    count_matrix_fun(resume_text,jd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b5a8b38b",
+   "id": "fbbebe22",
    "metadata": {},
    "outputs": [
     {
@@ -560,14 +616,6 @@
     "else: \n",
     "    print(\"application isrejected\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b768796",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
