added remove stopwords
removes stopwords from resume and job description

--- a/ATS_1.ipynb
+++ b/ATS_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7c6db327",
+   "id": "bbfbfa35",
    "metadata": {},
    "outputs": [
     {
@@ -23,11 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5e0ff9cb",
+   "id": "170599d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import docx2txt\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n"
    ]
@@ -35,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "34545ef8",
+   "id": "e7db5d23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ce3a8f32",
+   "id": "ca12b6e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "af0454e4",
+   "id": "835f26e6",
    "metadata": {},
    "outputs": [
     {
@@ -90,8 +92,8 @@
     "    cv = CountVectorizer()\n",
     "    count_matrix = cv.fit_transform(text)\n",
     "    # Calculate cosine similarity similar to percent match\n",
-    "    match = cosine_similarity(count_matrix)[0][1]\n",
-    "    match = (match + 1)/2*100\n",
+    "    cos_sim = cosine_similarity(count_matrix)[0][1]\n",
+    "    match = (cos_sim + 1)/2*100\n",
     "    match = round(match,2)\n",
     "    print(f\"Match: {match}%\")\n",
     "\n",
