added stemming, lemmatization
preprocess each resume and job description

--- a/ATS_1.ipynb
+++ b/ATS_1.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "bbfbfa35",
+   "execution_count": 60,
+   "id": "c31bcbd3",
    "metadata": {},
    "outputs": [
     {
@@ -11,33 +11,53 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: docx2txt in c:\\users\\caleb\\appdata\\roaming\\python\\python39\\site-packages (0.8)\n",
+      "Requirement already satisfied: nltk in c:\\programdata\\anaconda3\\lib\\site-packages (3.5)\n",
+      "Collecting nltk\n",
+      "  Downloading nltk-3.8.1-py3-none-any.whl (1.5 MB)\n",
+      "     ---------------------------------------- 1.5/1.5 MB 6.4 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: click in c:\\programdata\\anaconda3\\lib\\site-packages (from nltk) (8.0.4)\n",
+      "Requirement already satisfied: tqdm in c:\\programdata\\anaconda3\\lib\\site-packages (from nltk) (4.64.1)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from nltk) (2022.7.9)\n",
+      "Requirement already satisfied: joblib in c:\\programdata\\anaconda3\\lib\\site-packages (from nltk) (1.1.1)\n",
+      "Requirement already satisfied: colorama in c:\\programdata\\anaconda3\\lib\\site-packages (from click->nltk) (0.4.5)\n",
+      "Installing collected packages: nltk\n",
+      "Successfully installed nltk-3.8.1\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: The script nltk.exe is installed in 'C:\\Users\\caleb\\AppData\\Roaming\\Python\\Python39\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
      ]
     }
    ],
    "source": [
-    "pip install docx2txt"
+    "pip install nltk --upgrade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "170599d7",
+   "execution_count": 61,
+   "id": "07e04597",
    "metadata": {},
    "outputs": [],
    "source": [
     "import docx2txt\n",
+    "import nltk\n",
     "from nltk.corpus import stopwords\n",
-    "\n",
+    "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
+    "from nltk.tokenize import word_tokenize\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "e7db5d23",
+   "execution_count": 62,
+   "id": "717e460c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ca12b6e5",
+   "execution_count": 63,
+   "id": "ae211f77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,28 +89,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "835f26e6",
+   "execution_count": 64,
+   "id": "5fbf4bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\caleb\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\caleb\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\caleb\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Donwload NLTK resources\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('wordnet')\n",
+    "\n",
+    "# Initialize Stemmer and lemmatizer\n",
+    "stemmer = PorterStemmer()\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "# List of stopwords\n",
+    "stopwords_set = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "dcaa09c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pre Process Text\n",
+    "def preprocess_text(text):\n",
+    "    # Tokenize the text into individual words\n",
+    "    tokens = word_tokenize(text)\n",
+    "    \n",
+    "    # Remove stopwords and perform stemming/lemmatization\n",
+    "    processed_tokens = [stemmer.stem(lemmatizer.lemmatize(token)) for token in tokens if token.lower() not in stopwords_set]\n",
+    "    \n",
+    "    # Join the processed tokens back into a string\n",
+    "    processed_text = ' '.join(processed_tokens)\n",
+    "    \n",
+    "    return processed_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "79b06b5d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Match: 83.75%\n",
-      "Match: 84.52%\n",
-      "Match: 84.77%\n",
-      "Match: 85.02%\n"
+      "Match: 67.74%\n",
+      "Match: 68.99%\n",
+      "Match: 66.78%\n",
+      "Match: 71.04%\n"
      ]
     }
    ],
    "source": [
     "# List of text to store resume and job desription\n",
     "def count_matrix_fun(resume,jd):\n",
-    "    text = [resume,jd]\n",
+    "    # Preprocess resume and job description\n",
+    "    processed_resume = preprocess_text(resume)\n",
+    "    processed_jd = preprocess_text(jd)\n",
+    "    \n",
+    "    text = [processed_resume,processed_jd]\n",
     "    # Count the number of words in the text matrix\n",
     "    cv = CountVectorizer()\n",
     "    count_matrix = cv.fit_transform(text)\n",
+    "    \n",
     "    # Calculate cosine similarity similar to percent match\n",
     "    cos_sim = cosine_similarity(count_matrix)[0][1]\n",
     "    match = (cos_sim + 1)/2*100\n",
@@ -102,6 +184,14 @@
     "for i, resume_text in enumerate(resumes):\n",
     "    count_matrix_fun(resume_text,jd)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc785e45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
